--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'com.github.salemebo:restful-api:0.2.8'
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
 	runtimeOnly 'mysql:mysql-connector-java'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
 
 tasks.named('test') {
