--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
 	runtimeOnly 'mysql:mysql-connector-java'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '2.6.4'
 }
 
 tasks.named('test') {
