Integrated Caffeine Caching and Performance Testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.session.jdbc.initialize-schema= always
 spring.datasource.url=jdbc:mysql://localhost:3306/cricket_stats
 spring.datasource.username=root
 spring.datasource.password=rootpassword
+
+## Caffeine Cache
+spring.cache.type = caffeine
+spring.cache.cache-names = seriesCache , matchCache , matchListCache , teamCache , scoreBoardCache , playerCache , playerStatCache
+spring.cache.caffeine.spec= initialCapacity = 100 , maximumSize = 500 , expireAfterAccess = 600s
