--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.data.mongodb.port= 27017
 spring.data.mongodb.database= cricket_stats
 spring.data.mongodb.username= root
 spring.data.mongodb.password= rootpassword
+spring.data.mongodb.authentication-database=admin
